docs: Add FFM/JNI glossary entries and ANSI-without-native guide
- Add FFM, JNI, and Native Access definitions to the glossary
- Add "Using JLine for ANSI Output Only" section to terminal providers
  docs, covering: minimal deps, AttributedString.toAnsi() without a
  terminal, style attributes, exec/dumb providers, provider comparison
  table, and Jansi migration guide

Relates to #1646

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>